<?php


namespace App\Exception;

use RuntimeException;

final class ReservationIntrouvableException extends RuntimeException
{
}