<?php


namespace App\Exception;

use RuntimeException;

final class SalleIndisponibleException extends RuntimeException
{
}